--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Fragments Tutorial</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="chart_fragment">Chart Fragment</string>
+    <string name="home_fragment">Home Fragment</string>
+    <string name="list_fragment">List Fragment</string>
 </resources>
